# Bachelor_Arbeit

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_gemma.txt  requirements_qwen.txt
docs/baseline/: train_epoch_logs_finetuned.csv  val_epoch_logs_finetuned.csv  validation_results_resnet50_biobert_finetuned.csv
docs/gemma/: few_shot.csv  fine_tuned_batchsize_2.csv  fine_tuned_batchsize_2_test_set.csv  fine_tuned_batchsize_4.csv  fine_tuned_batchsize_8.csv  gemma_all_models_2_checkpoint.csv  (+3 more)
evalutation/: eval_close.py  eval_combined.py  eval_g_eval.py  eval_main.ipynb  eval_open.py  utils.py
gemma_notebooks/: attention_weights_gemma_questions_09_05_25.py  attention_weights_gemma_questions_validation.py  bild_augmentation_inferenz.ipynb  evaluation_checkpoints.ipynb  gemma_eval_checkpoints.py  gemma_few_shot.ipynb  gemma_finetuning.ipynb  gemma_system_prompt.py  integrated_gradient_close_ended.ipynb  integrated_gradient_open_ended (1).ipynb  integrated_gradient_open_ended.ipynb  text_attention.ipynb  text_augmentation_inferenz.ipynb  text_augmentation_inferenz_llm.ipynb  validation_subset_indices.txt  xai_on_qwen.ipynb
notebooks/: eda.ipynb  g_eval.py  validation_subset_selection.ipynb
qwen_notebooks/: evaluation_finetuned_qwen.py  evaluation_on_finetuned_qwen.py  evaluation_on_server.py  few_shot_on_qwen.py  finetuning_qwen_bs2.ipynb  val_through_training.py  zero_shot_on_qwen.py
resnet50_biobert/: config.py  model_text.py  model_transformer.py  test_inspect.py  train.py  validate.py
temp/: get_data.py
(+110 files in other folders)
