[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Bachelor_Arbeit"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Luka Sokcevic, Arbnor Ziberi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["Bachelor_Arbeit"]
include = ["pyproject.toml", "Bachelor_Arbeit/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Bachelor_Arbeit"]
force-sort-within-sections = true

